--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/common": "^5.2.10",
     "@angular/compiler": "^5.2.10",
     "@angular/core": "^5.2.10",
+    "@angular/flex-layout": "^5.0.0-beta.14",
     "@angular/forms": "^5.2.10",
     "@angular/http": "^5.2.10",
     "@angular/material": "~5.2.5",
@@ -26,6 +27,7 @@
     "@angular/router": "^5.2.10",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "moment": "^2.22.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
