--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.22.1",
+    "node-sass": "^4.9.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
@@ -47,7 +48,6 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2"
