--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "config": "ts-node ./set-env.ts",
+    "start": "npm run config -- --environment=dev && ng serve --environment=dev",
+    "build": "npm run config -- --environment=prod && ng build --environment=prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -26,10 +27,12 @@
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@angular/router": "^5.2.10",
     "core-js": "^2.4.1",
+    "dotenv": "^5.0.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.22.1",
     "node-sass": "^4.9.0",
     "rxjs": "^5.5.2",
+    "yargs": "^11.0.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
