--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ jobs:
     - stage: build
       script:
         - docker login -u $DOCKER_USER -p $DOCKER_PASS
-        - make # Uses AUTH_TOKEN env var set by the CI
-        - make dockerimage
+        - make build # Uses AUTH_TOKEN env var set by the CI
         - make push
     - stage: deploy
       env:
