update docker network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     mem_limit: 250000000
     restart: on-failure
     networks:
-      - production
+      - dogturds
 networks:
-  production:
+  dogturds:
     external: true
